--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Satoshi-Variable';
+  src: url('/public/Satoshi-Variable.ttf');
+  font-weight: normal;
+}
