--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -1,7 +1,9 @@
 @import "../../vars.css";
 
 
+
 .profileHeader {
+
     background-color: var(--yellow);
     height: 61vw;
     max-height: 400px;
@@ -26,7 +28,7 @@
     line-height: 8vw;
     gap: 20px;
     max-width: 400px;
-    padding: 35px;
+    padding: 35\px;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -34,4 +36,38 @@
 
 .level {
     font-size: 4vw;
+}
+
+.container {
+    width: auto;
+    overflow-x: scroll;
+    background: white;
+    border-radius: 20px;
+    border: 1px solid ;
+    margin-left: 20px;
+    margin-right: 20px;
+
+    padding: 25px;
+    white-space:nowrap;
+    gap: 40px;
+
+    display: flex;
+    flex-direction: row;
+}
+.achievementpic {
+    border-radius: 50%;
+    background-color: white;
+    width: 27vw;
+    height: 27vw;
+    border: 1px solid;
+    margin: 5px;
+}
+
+
+.achievement {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
