--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -3,38 +3,37 @@
 
 
 .profileHeader {
-
     background-color: var(--yellow);
-    height: 70vw;
-    max-height: 400px;
-    align-content: start;
+    width: 100%;
+    height: 69vw;
+    max-height: 500px;
+    align-content: end;
+    border-bottom: black solid;
 }
 
 .profilePic {
     border-radius: 50%;
     background-color: var(--offwhite);
-    width: 30vw;
-    height: 30vw;
+    width: 26vw;
+    height: 26vw;
+    max-height: 200px;
+    max-width: 200px;
     border: 1px solid;
-    background-image: url('../../../public/freaky-bean.svg');
-    background-size: 85%;
-    background-position: top;
 }
+
 
 .wrapper {
     line-height: 8vw;
-    gap: 25px;
+    gap: 20px;
     max-width: 400px;
-    padding: 25px;
+    padding: 35\px;
     align-items: center;
     display: flex;
     flex-direction: row;
-    margin-top: 9vh;
 }
 
 .level {
-    font-size: 5vw;
-    margin-top: 0.5vh;
+    font-size: 4vw;
 }
 
 .container {
@@ -56,8 +55,8 @@
 .achievementpic {
     border-radius: 50%;
     background-color: white;
-    width: 28vw;
-    height: 28vw;
+    width: 27vw;
+    height: 27vw;
     border: 1px solid;
     margin: 5px;
 }
