--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -5,7 +5,7 @@
 .profileHeader {
     background-color: var(--yellow);
     width: 100%;
-    height: 69vw;
+    height: 60vw;
     max-height: 500px;
     align-content: end;
     border-bottom: black solid;
@@ -26,7 +26,7 @@
     line-height: 8vw;
     gap: 20px;
     max-width: 400px;
-    padding: 35\px;
+    padding: 30px;
     align-items: center;
     display: flex;
     flex-direction: row;
