--- a/frontend/src/pages/PrizePage/prizepage.module.css
+++ b/frontend/src/pages/PrizePage/prizepage.module.css
@@ -1,36 +1,62 @@
-
 .wrapper {
     max-width: 100%;
     margin: 0 auto;
     overflow: hidden;
     position: relative;
-
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 .surprise {
-    position: fixed;
-    max-width: 400px;
-    overflow: hidden;
-    left: 50%;
-    margin-left: -200px;
+    width: 200px;
+    height: 200px;
     position: absolute;
-    z-index: -150;
-
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
     animation: spin 5s linear infinite;
-
+    object-fit: contain;
 }
 
 @keyframes spin {
     from {
-      transform: rotate(0deg);
+      transform: translate(-50%, -50%) rotate(0deg);
     }
     to {
-      transform: rotate(360deg);
+      transform: translate(-50%, -50%) rotate(360deg);
     }
-  }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .text {
-    padding-top: 40%;
-    padding-left: 40px;
-    align-content: center;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    width: 400px;
+    margin-top: 80px;
+    position: relative;
+    z-index: 1;
+}
+
+.chicken {
+    width: 200px;
+    height: 200px;
+    margin: 20px auto;
+    object-fit: contain;
+    animation: fadeIn 1s ease-in;
+    display: block;
 }
